# Edge-Voice-Infra

./: .gitignore  CMakeLists.txt  README.md
common/gateway/: CMakeLists.txt
common/gateway/include/: all.h  remote_action.h  remote_server.h  session.h
common/gateway/src/: config.cpp  main.cpp  remote_action.cpp  remote_server.cpp  tcp_comm.cpp  unit_data.cpp  zmq_bus.cpp
common/hybrid-comm/include/: zmq_endpoint.h
common/hybrid-comm/include/libzmq/: zmq.h  zmq_utils.h
common/hybrid-comm/src/: zmq_messag.cpp
common/infra-controller/: CMakeLists.txt
common/infra-controller/include/: StackFlow.h  StackFlowUtil.h  channel.h
common/infra-controller/src/: StackFlow.cpp  StackFlowUtil.cpp  channel.cpp
common/network/: CMakeLists.txt
common/network/include/: Acceptor.h  Callbacks.h  Channel.h  Connector.h  Endian.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  InetAddress.h  Poller.h  SocketsOps.h  Task.h  TcpClient.h  TcpConnection.h  TcpServer.h  buffer.h  util.h
common/network/src/: Acceptor.cc  Connector.cc  EventLoop.cc  EventLoopThread.cc  EventLoopThreadPool.cc  InetAddress.cc  Poller.cc  Socket.cc  SocketsOps.cc  TcpClient.cc  TcpConnection.cc  TcpServer.cc  buffer.cc  util.cc
common/stackflow/: CMakeLists.txt
common/stackflow/include/: NodeChannel.h  StackFlow.h  StackFlowUtil.h
common/stackflow/src/: NodeChannel.cpp  StackFlow.cpp  StackFlowUtil.cpp
common/unit-manger/: CMakeLists.txt
common/unit-manger/include/: all.h  remote_server.h  session.h  unit_data.h  zmq_bus.h
common/unit-manger/src/: config.cpp  main.cpp  remote_action.cpp  remote_server.cpp  tcp_comm.cpp  zmq_bus.cpp
common/zmq-comm/: CMakeLists.txt
common/zmq-comm/include/: zmq_endpoint.h  zmq_message.h
common/zmq-comm/src/: zmq_endpoint.cpp  zmq_messag.cpp  zmq_message.cpp
config/: master_config.json
logging/: logger.h
node/src/: main.cpp
scripts/: build_llm_service.sh  build_phase1_services.sh  build_tts_service.sh  build_voice_service.sh  phase1_query.py  test_rag_llm_flow.py
services/llm-service/: CMakeLists.txt
services/llm-service/src/: ipc_service.cpp  main.cpp
services/rag-service/: CMakeLists.txt
services/rag-service/data/knowledge/: vehicle_knowledge.sqlite
services/rag-service/data/sources/: vehicle_manual.md
services/rag-service/python/: rag_query.py
services/rag-service/rag/: README.md  build_index.py  query.py
services/rag-service/rag/edge_rag/: __init__.py  documents.py  embeddings.py  json_util.py  search.py  store.py  text.py
services/rag-service/src/: main.cpp
services/tts-service/: CMakeLists.txt
services/tts-service/src/: ipc_service.cpp  main.cpp  worker.cpp
services/voice-service/: CMakeLists.txt
services/voice-service/src/: voice_microphone.cpp
tests/: CMakeLists.txt  client.cpp  server.cpp  stress_zmq.cpp  zmq_test.cpp
